--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -1,31 +1,33 @@
 /* http://fontawesome.io/assets/font-awesome/fonts/ */
-// @font-face {
-// 	font-family: 'FontAwesome';
-// 	src: url('fonts/fontawesome-webfont.eot?v=4.2.0');
-// 	src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), 
-// 	url('fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), 
-// 	url('fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), 
-// 	url('fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
-// 	font-weight: normal;
-// 	font-style: normal;
-// 	font-smooth:always;
-// 	font-smoothing:always;
-// 	-webkit-font-smoothing:antialiased;
-// 	-moz-font-smoothing:antialiased;
-// }
-// .font-awesome{
-// 	&:before {
-// 		font-family: FontAwesome;
-// 		display: inline-block;
-// 		position: relative;
-// 		color: inherit;
-// 		text-decoration: none;
-// 		vertical-align: middle;
-// 		line-height: 22px;
-// 		font-size: 22px;
-// 		margin-right: 10px;
-// 	}
-// }
+@font-face {
+	font-family: 'FontAwesome';
+	src: url('fonts/fontawesome-webfont.eot?v=4.2.0');
+	src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), 
+	url('fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), 
+	url('fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), 
+	url('fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-smooth:always;
+	font-smoothing:always;
+	-webkit-font-smoothing:antialiased;
+	-moz-font-smoothing:antialiased;
+}
+.font-awesome{
+	&:before {
+		font-family: FontAwesome;
+		display: inline-block;
+		position: relative;
+		color: inherit;
+		text-decoration: none;
+		vertical-align: middle;
+		line-height: 22px;
+		font-size: 22px;
+		margin-right: 10px;
+	}
+}
+
+.row{max-width:960px;}
 
 a,a:hover,a:active{text-decoration:none;}
 
@@ -36,10 +38,6 @@ a,a:hover,a:active{text-decoration:none;}
 .no-radius{border-radius:0;}
 .radius{border-radius:3px;}
 .no-border{border:0px;}
-
-
-.header{background-color:$header-background;}
-.footer{background-color:$footer-background;}
 
 .header, .footer {
 	float:left;
@@ -53,3 +51,10 @@ a,a:hover,a:active{text-decoration:none;}
 	margin-top: 0;
 	margin-bottom: 0;
 }
+.header{
+	background-color:$header-background;
+	max-height:394px;
+	@include bxInset(0px, -2px, 1px, 0px,rgba(0, 0, 0,0.10) );
+	margin-bottom:30px;
+}
+.footer{background-color:$footer-background;}
