Versão desktop finalizada

--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -1,4 +1,5 @@
-fieldset{border:0;padding:0;}
+fieldset{border:0;padding:0;margin:0;}
+input,textarea,select{outline-style: none;}
 
 .header{
 	input{
