--- a/scss/pages/header.scss
+++ b/scss/pages/header.scss
@@ -41,7 +41,9 @@
 		font-size:15px;
 	}
 }
+.logo{
 
+}
 .main-event{
 	background-image: url(../img/main-event-background.jpg);
 	background-repeat: no-repeat;
