--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -6,13 +6,10 @@
 	list-style:none;
 	padding:0px;
 	margin:0 0 10px 0;
-	li{
-		width: 305px;
+	.event-wrapper{
 		height: 192px;
 		position: relative;
-		float: left;
 		background: #f8f8f8;
-		margin:7px;
 		&:before{
 			content:"";
 			position:absolute;
@@ -23,20 +20,29 @@
 			&:before{
 				@include sprt (-108px,-1px,56px,56px);
 			}
-			.follow-event{background-color:$second-red;}	
+			.follow-event{
+				background-color:$second-red;
+				&:hover{background-color:darken($second-red,5%);}
+			}
 		}
 		&.blue{
 			&:before{
 				@include sprt (-165px,-1px,56px,56px);
 			}
-			.follow-event{background-color:$main-blue;}
+			.follow-event{
+				background-color:$main-blue;
+				&:hover{background-color:darken($main-blue,5%);}
+			}
 		}
 		&.gray{
 			&:before{
 				@include sprt (-51px,-1px,56px,56px);
 			}
-			.follow-event{background-color:#f2f2f2;color:#424242;}
+			.follow-event{
+				background-color:#f2f2f2;color:#424242;
+			}
 		}
+		&.advertisement{margin-bottom:0;}
 		.infos{
 			width: 100%;
 			display: block;
@@ -75,6 +81,7 @@
 				&:before{
 					left:100px;
 				}
+				&:hover{background-color:darken(#f2f2f2,5%);}
 			}
 		}
 		.title{
@@ -101,8 +108,8 @@
 	position:relative;
 	&:before{
 		position: absolute;
-		left: 10px;
+		left: 15px;
 		top: 7px;
-		font-size: 15px;
+		font-size: 13px;
 	}
 }
