--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -59,7 +59,7 @@ a,a:hover,a:active{text-decoration:none;}
 }
 .footer{
 	background-color:$footer-background;
-	height:350px;
+	min-height:300px;
 	margin-top:10px;
 	color:#fff;
 }
