--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -6,6 +6,10 @@ $second-red:#f83636;
 $header-background:#f0f0f0;
 $footer-background:#424242;
 
+//cards
+$black-card:#323232;
+$red-card:#ff3535;
+
 $font-color:#58585a;
 
 $menu-gray:#999999;
