--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -40,22 +40,22 @@ a,a:hover,a:active{text-decoration:none;}
 .no-border{border:0px;}
 
 .header, .footer {
-	float:left;
 	padding:32px 0;
 	width:100%;
 }
-.header, .footer {
+section {
+// .header, .footer, .content {
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 0;
 	margin-bottom: 0;
+	float: left;
 }
 .header{
 	background-color:$header-background;
 	max-height:394px;
 	@include bxInset(0px, -2px, 1px, 0px,rgba(0, 0, 0,0.10) );
-	margin-bottom:30px;
 }
 .footer{
 	background-color:$footer-background;
